Correct SA: triang not boundu(2) uncertain param

--- a/sa/get_state_vars.ipynb
+++ b/sa/get_state_vars.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,8 @@
       "Key 'fdene' not in MFILE. KeyError! Check MFILE\n",
       "Key 'psepbqarmax' not in MFILE. KeyError! Check MFILE\n",
       "Key 'feffcd' not in MFILE. KeyError! Check MFILE\n",
-      "Key 'boundl_18' not in MFILE. KeyError! Check MFILE\n"
+      "Key 'boundl_18' not in MFILE. KeyError! Check MFILE\n",
+      "Key 'boundu_2' not in MFILE. KeyError! Check MFILE\n"
      ]
     },
     {
@@ -40,8 +41,8 @@
      "text": [
       "\n",
       "\n",
-      "\"fdene\"  \"hfact\"  \"coreradius\"  \"psepbqarmax\"  \"peakfactrad\"  \"etaech\"  \"feffcd\"  \"etaiso\"  \"boundl_18\"  \"alstroh\"  \"sig_tf_wp_max\"  \"triang\"\n",
-      "  1.2  1.2  0.7500000000000001  9.7  3.33  0.5  1.0  0.9  3.25  720000000.0  640000000.0  0.5\n"
+      "\"fdene\"  \"hfact\"  \"coreradius\"  \"psepbqarmax\"  \"peakfactrad\"  \"etaech\"  \"feffcd\"  \"etaiso\"  \"boundl_18\"  \"alstroh\"  \"sig_tf_wp_max\"  \"boundu_2\"\n",
+      "  1.2  1.2  0.7500000000000001  9.7  3.33  0.5  1.0  0.9  3.25  720000000.0  640000000.0  12.0\n"
      ]
     }
    ],
@@ -77,7 +78,7 @@
     "    \"pinjalw\": 0.0,\n",
     "    \"alstroh\": 0.0,\n",
     "    \"sig_tf_wp_max\": 0.0,\n",
-    "    \"boundu_2\": 30.0,  # default\n",
+    "    \"boundu_2\": 12.0,  # input\n",
     "    \"triang\": 0.0,\n",
     "}\n",
     "\n",
@@ -86,7 +87,7 @@
     "    \"ralpne\",\n",
     "    \"kappa\",\n",
     "    \"flhthresh\",\n",
-    "    \"boundu_2\",\n",
+    "    \"triang\",\n",
     "    \"cboot\",\n",
     "    \"pinjalw\",\n",
     "    \"etath\",\n",
@@ -97,6 +98,7 @@
     "# Get uncertain parameter values at solution vector\n",
     "for unc_param in unc_params.keys():\n",
     "    # If value isn't found, mfile raises exception, catches it, returns 0\n",
+    "    # TODO Bug here: won't get array values (e.g. boundu_2): have to rely on manual inputs in unc_params\n",
     "    val = mfile.data[unc_param].get_scan(-1)\n",
     "    if val != 0:\n",
     "        unc_params[unc_param] = val\n",
