Key diffs and symbols for design comparison plots

--- a/design_points/compare_designs_table.ipynb
+++ b/design_points/compare_designs_table.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "20                 TF coil conduit case thickness (m)  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,6 +430,141 @@
     "    column_format=\"llrrp{0.45\\linewidth}\",\n",
     ")\n",
     "opt_param_table_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Parameter</th>\n",
+       "      <th>$\\min R_{major}$</th>\n",
+       "      <th>$\\max Q$</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>$\\Delta R_{WP}$</td>\n",
+       "      <td>0.516979</td>\n",
+       "      <td>0.707588</td>\n",
+       "      <td>Radial thickness of winding pack (m)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>$f_{Xe}$</td>\n",
+       "      <td>0.000676</td>\n",
+       "      <td>0.000899</td>\n",
+       "      <td>Xenon density fraction relative to electron de...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>$f_{CS_{steel}}$</td>\n",
+       "      <td>0.511524</td>\n",
+       "      <td>0.709818</td>\n",
+       "      <td>Central solenoid steel fraction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>$t_{TF, dis}$</td>\n",
+       "      <td>20.235901</td>\n",
+       "      <td>26.565316</td>\n",
+       "      <td>Fast discharge time for TF coil in event of qu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>$T_e$</td>\n",
+       "      <td>13.022663</td>\n",
+       "      <td>15.921998</td>\n",
+       "      <td>Volume averaged electron temperature (keV)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>$\\Delta R_{TF case, in}$</td>\n",
+       "      <td>0.217757</td>\n",
+       "      <td>0.296794</td>\n",
+       "      <td>Inboard TF coil case outer (non-plasma side) t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>$\\Delta R_{TF cond}$</td>\n",
+       "      <td>0.008140</td>\n",
+       "      <td>0.011035</td>\n",
+       "      <td>TF coil conduit case thickness (m)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Parameter  $\\min R_{major}$   $\\max Q$  \\\n",
+       "6            $\\Delta R_{WP}$          0.516979   0.707588   \n",
+       "8                   $f_{Xe}$          0.000676   0.000899   \n",
+       "11          $f_{CS_{steel}}$          0.511524   0.709818   \n",
+       "16             $t_{TF, dis}$         20.235901  26.565316   \n",
+       "17                     $T_e$         13.022663  15.921998   \n",
+       "19  $\\Delta R_{TF case, in}$          0.217757   0.296794   \n",
+       "20      $\\Delta R_{TF cond}$          0.008140   0.011035   \n",
+       "\n",
+       "                                          Description  \n",
+       "6                Radial thickness of winding pack (m)  \n",
+       "8   Xenon density fraction relative to electron de...  \n",
+       "11                    Central solenoid steel fraction  \n",
+       "16  Fast discharge time for TF coil in event of qu...  \n",
+       "17         Volume averaged electron temperature (keV)  \n",
+       "19  Inboard TF coil case outer (non-plasma side) t...  \n",
+       "20                 TF coil conduit case thickness (m)  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Drop params col\n",
+    "opt_param_table_no_params_df = opt_param_table_df.drop(columns=[\"Parameter\"])\n",
+    "opt_param_table_no_params_df.rename(columns={\"Symbol\": \"Parameter\"}, inplace=True)\n",
+    "\n",
+    "# Only keep key differences\n",
+    "for index, row in opt_param_table_no_params_df.iterrows():\n",
+    "    a = row[\"$\\min R_{major}$\"]\n",
+    "    b = row[\"$\\max Q$\"]\n",
+    "    diff = abs((a - b) / ((a + b) / 2))\n",
+    "    if diff < 0.2:\n",
+    "        opt_param_table_no_params_df.drop(index, inplace=True)\n",
+    "\n",
+    "# Make latex table\n",
+    "opt_param_table_no_params_df.to_latex(\n",
+    "    \"key_opt_params_table.tex\",\n",
+    "    float_format=\"%.2e\",\n",
+    "    index=False,\n",
+    "    # longtable=True,\n",
+    "    column_format=\"llrrp{0.45\\linewidth}\",\n",
+    ")\n",
+    "opt_param_table_no_params_df"
    ]
   }
  ],
