Remove f-value inits in eq to ineq conversion tool
Only if init is <= 1.0.

--- a/design_points/prep_sol_for_uq.ipynb
+++ b/design_points/prep_sol_for_uq.ipynb
@@ -36,42 +36,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# original_in_name = \"lt_orig_IN.DAT\"\n",
-    "ineqs_in_name = \"lt_IN.DAT\"\n",
-    "# ineqs_in_name = \"lt_max_net_elec_IN.DAT\""
+    "original_in_name = \"SPR-068-5_IN.DAT\"\n",
+    "ineqs_in_name = \"SPR-068-5_ineqs_IN.DAT\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f-values removed as optimisation parameters = 22\n"
+      "f-value initialisation for ffuspow removed\n",
+      "f-value initialisation for fdene removed\n",
+      "f-value initialisation for fbetatry removed\n",
+      "Keeping f-value flhthresh with value 2.85\n",
+      "f-value initialisation for ftaulimit removed\n",
+      "f-value initialisation for fne0 removed\n",
+      "f-value initialisation for fradpwr removed\n",
+      "f-value initialisation for fpsepr removed\n",
+      "f-value initialisation for fiooic removed\n",
+      "f-value initialisation for fstrcase removed\n",
+      "f-value initialisation for fradwall removed\n",
+      "f-value initialisation for fpinj removed\n",
+      "f-value initialisation for fipir removed\n",
+      "f-values removed as optimisation parameters = 11\n",
+      "f-value initialisations removed = 12\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'lt_IN.DAT'"
+       "'SPR-068-5_ineqs_IN.DAT'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# convert(\n",
-    "#     original_in_name=original_in_name,\n",
-    "#     new_in_name=ineqs_in_name,\n",
-    "#     no_optimisation=False,\n",
-    "#     n_equalities=3,\n",
-    "#     remove_f_value_inits=False,\n",
-    "# )"
+    "convert(\n",
+    "    original_in_name=original_in_name,\n",
+    "    new_in_name=ineqs_in_name,\n",
+    "    no_optimisation=False,\n",
+    "    n_equalities=3,\n",
+    "    remove_f_value_inits=True,  # this might want to be the default\n",
+    ")"
    ]
   },
   {
